# geow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: cc-release.yml  ci.yml  release-please.yml  release.yml  semantic-release.yml
docs/: mkdocs.yml
src/geow/: __init__.py
tests/: __init__.py  test_geow.py
