[project]
name = "geow"
version = "1.0.5"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "lorerlrolerl", email = "lrl.aide307@simplelogin.fr" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
geow = "geow:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.2",
    "mkdocs-material>=9.6.17",
    "mkdocstrings>=0.30.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "python-semantic-release>=9.8.7",
]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
commit_parser = "angular"
upload_to_release = true
upload_to_pypi = false
