[project]
name = "geow"
# Remove this line: version = "0.1.0"
version = "0.0.0"
description = "Add Description"
readme = "README.md"
authors = [{ name = "lorerlrolerl", email = "lrl.aide307@simplelogin.fr" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "hypothesis>=6.138.2",
    "mkdocs-material>=9.6.17",
    "mkdocstrings>=0.30.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "python-semantic-release>=9.8.7",
]

[tool.uv] # uv-specific config if needed
dev-dependencies = ["python-semantic-release"]

[tool.semantic_release]
version_source = "tag"
upload_to_pypi = false
upload_to_release = true
pypi_repository = "testpypi"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }
