[build-system]
requires = ["setuptools>=68.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "geow"
dynamic = ["version"]
description = "A Python package"
readme = "README.md"
authors = [{ name = "lorerlrolerl", email = "lrl.aide307@simplelogin.fr" }]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "pre-commit>=4.3.0",
    "python-semantic-release>=10.3.1",
    "pyright>=1.1.403",
]

[tool.setuptools.dynamic]
version = { attr = "geow.__version__" }

[tool.semantic_release]
version_variable = "src/geow/__init__.py:__version__"
version_toml = "pyproject.toml:project.version"
build_command = "uv run python -m build"
upload_to_pypi = false
upload_to_release = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
